<resources>
    <string name="app_name">My Todo List</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_items">Add a new item...</string>
    <string name="title_activity_edit_item">Edit Current Item</string>
    <string name="save_items">Save</string>
    <string name="edit_items">Edit items ....</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="label_task_description">Task Name</string>
    <string name="label_due_date">Due Date</string>
    <string name="labe_status">Status</string>
    <string name="field_task_description">Enter the task name ...</string>
    <string name="btn_clear_data">CLEAR</string>
    <string-array name="status_array">
        <item>NOT STARTED</item>
        <item>ON GOING</item>
        <item>COMPLETED</item>
    </string-array>
</resources>
